Moves need to be fixed

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <div id="board"></div>
+    <button id="dice-btn">Roll Dice</button>
     <script src="./index.js"></script>
 </body>
 </html>
